--- a/train.ipynb
+++ b/train.ipynb
@@ -2,106 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Defaulting to user installation because normal site-packages is not writeable\n",
-      "Requirement already satisfied: tensorflow in c:\\users\\91807\\appdata\\roaming\\python\\python310\\site-packages (2.15.0)\n",
-      "Requirement already satisfied: keras in c:\\users\\91807\\appdata\\roaming\\python\\python310\\site-packages (2.15.0)\n",
-      "Requirement already satisfied: pandas in c:\\users\\91807\\appdata\\roaming\\python\\python310\\site-packages (2.0.3)\n",
-      "Requirement already satisfied: numpy in c:\\users\\91807\\appdata\\roaming\\python\\python310\\site-packages (1.23.5)\n",
-      "Requirement already satisfied: pillow in c:\\users\\91807\\appdata\\roaming\\python\\python310\\site-packages (9.5.0)\n",
-      "Requirement already satisfied: streamlit in c:\\users\\91807\\appdata\\roaming\\python\\python310\\site-packages (1.38.0)\n",
-      "Requirement already satisfied: tensorflow-intel==2.15.0 in c:\\users\\91807\\appdata\\roaming\\python\\python310\\site-packages (from tensorflow) (2.15.0)\n",
-      "Requirement already satisfied: absl-py>=1.0.0 in c:\\users\\91807\\appdata\\roaming\\python\\python310\\site-packages (from tensorflow-intel==2.15.0->tensorflow) (1.4.0)\n",
-      "Requirement already satisfied: astunparse>=1.6.0 in c:\\users\\91807\\appdata\\roaming\\python\\python310\\site-packages (from tensorflow-intel==2.15.0->tensorflow) (1.6.3)\n",
-      "Requirement already satisfied: flatbuffers>=23.5.26 in c:\\users\\91807\\appdata\\roaming\\python\\python310\\site-packages (from tensorflow-intel==2.15.0->tensorflow) (23.5.26)\n",
-      "Requirement already satisfied: gast!=0.5.0,!=0.5.1,!=0.5.2,>=0.2.1 in c:\\users\\91807\\appdata\\roaming\\python\\python310\\site-packages (from tensorflow-intel==2.15.0->tensorflow) (0.4.0)\n",
-      "Requirement already satisfied: google-pasta>=0.1.1 in c:\\users\\91807\\appdata\\roaming\\python\\python310\\site-packages (from tensorflow-intel==2.15.0->tensorflow) (0.2.0)\n",
-      "Requirement already satisfied: h5py>=2.9.0 in c:\\users\\91807\\appdata\\roaming\\python\\python310\\site-packages (from tensorflow-intel==2.15.0->tensorflow) (3.9.0)\n",
-      "Requirement already satisfied: libclang>=13.0.0 in c:\\users\\91807\\appdata\\roaming\\python\\python310\\site-packages (from tensorflow-intel==2.15.0->tensorflow) (16.0.6)\n",
-      "Requirement already satisfied: ml-dtypes~=0.2.0 in c:\\users\\91807\\appdata\\roaming\\python\\python310\\site-packages (from tensorflow-intel==2.15.0->tensorflow) (0.2.0)\n",
-      "Requirement already satisfied: opt-einsum>=2.3.2 in c:\\users\\91807\\appdata\\roaming\\python\\python310\\site-packages (from tensorflow-intel==2.15.0->tensorflow) (3.3.0)\n",
-      "Requirement already satisfied: packaging in c:\\users\\91807\\appdata\\roaming\\python\\python310\\site-packages (from tensorflow-intel==2.15.0->tensorflow) (23.1)\n",
-      "Requirement already satisfied: protobuf!=4.21.0,!=4.21.1,!=4.21.2,!=4.21.3,!=4.21.4,!=4.21.5,<5.0.0dev,>=3.20.3 in c:\\users\\91807\\appdata\\roaming\\python\\python310\\site-packages (from tensorflow-intel==2.15.0->tensorflow) (4.24.2)\n",
-      "Requirement already satisfied: setuptools in c:\\program files\\python310\\lib\\site-packages (from tensorflow-intel==2.15.0->tensorflow) (65.5.0)\n",
-      "Requirement already satisfied: six>=1.12.0 in c:\\users\\91807\\appdata\\roaming\\python\\python310\\site-packages (from tensorflow-intel==2.15.0->tensorflow) (1.16.0)\n",
-      "Requirement already satisfied: termcolor>=1.1.0 in c:\\users\\91807\\appdata\\roaming\\python\\python310\\site-packages (from tensorflow-intel==2.15.0->tensorflow) (2.3.0)\n",
-      "Requirement already satisfied: typing-extensions>=3.6.6 in c:\\users\\91807\\appdata\\roaming\\python\\python310\\site-packages (from tensorflow-intel==2.15.0->tensorflow) (4.12.2)\n",
-      "Requirement already satisfied: wrapt<1.15,>=1.11.0 in c:\\users\\91807\\appdata\\roaming\\python\\python310\\site-packages (from tensorflow-intel==2.15.0->tensorflow) (1.14.1)\n",
-      "Requirement already satisfied: tensorflow-io-gcs-filesystem>=0.23.1 in c:\\users\\91807\\appdata\\roaming\\python\\python310\\site-packages (from tensorflow-intel==2.15.0->tensorflow) (0.31.0)\n",
-      "Requirement already satisfied: grpcio<2.0,>=1.24.3 in c:\\users\\91807\\appdata\\roaming\\python\\python310\\site-packages (from tensorflow-intel==2.15.0->tensorflow) (1.57.0)\n",
-      "Requirement already satisfied: tensorboard<2.16,>=2.15 in c:\\users\\91807\\appdata\\roaming\\python\\python310\\site-packages (from tensorflow-intel==2.15.0->tensorflow) (2.15.2)\n",
-      "Requirement already satisfied: tensorflow-estimator<2.16,>=2.15.0 in c:\\users\\91807\\appdata\\roaming\\python\\python310\\site-packages (from tensorflow-intel==2.15.0->tensorflow) (2.15.0)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\users\\91807\\appdata\\roaming\\python\\python310\\site-packages (from pandas) (2.8.2)\n",
-      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\91807\\appdata\\roaming\\python\\python310\\site-packages (from pandas) (2023.3)\n",
-      "Requirement already satisfied: tzdata>=2022.1 in c:\\users\\91807\\appdata\\roaming\\python\\python310\\site-packages (from pandas) (2023.3)\n",
-      "Requirement already satisfied: altair<6,>=4.0 in c:\\users\\91807\\appdata\\roaming\\python\\python310\\site-packages (from streamlit) (5.1.0)\n",
-      "Requirement already satisfied: blinker<2,>=1.0.0 in c:\\users\\91807\\appdata\\roaming\\python\\python310\\site-packages (from streamlit) (1.9.0)\n",
-      "Requirement already satisfied: cachetools<6,>=4.0 in c:\\users\\91807\\appdata\\roaming\\python\\python310\\site-packages (from streamlit) (5.3.1)\n",
-      "Requirement already satisfied: click<9,>=7.0 in c:\\users\\91807\\appdata\\roaming\\python\\python310\\site-packages (from streamlit) (8.1.7)\n",
-      "Requirement already satisfied: pyarrow>=7.0 in c:\\users\\91807\\appdata\\roaming\\python\\python310\\site-packages (from streamlit) (19.0.0)\n",
-      "Requirement already satisfied: requests<3,>=2.27 in c:\\users\\91807\\appdata\\roaming\\python\\python310\\site-packages (from streamlit) (2.32.3)\n",
-      "Requirement already satisfied: rich<14,>=10.14.0 in c:\\users\\91807\\appdata\\roaming\\python\\python310\\site-packages (from streamlit) (13.5.2)\n",
-      "Requirement already satisfied: tenacity<9,>=8.1.0 in c:\\users\\91807\\appdata\\roaming\\python\\python310\\site-packages (from streamlit) (8.2.3)\n",
-      "Requirement already satisfied: toml<2,>=0.10.1 in c:\\users\\91807\\appdata\\roaming\\python\\python310\\site-packages (from streamlit) (0.10.2)\n",
-      "Requirement already satisfied: gitpython!=3.1.19,<4,>=3.0.7 in c:\\users\\91807\\appdata\\roaming\\python\\python310\\site-packages (from streamlit) (3.1.32)\n",
-      "Requirement already satisfied: pydeck<1,>=0.8.0b4 in c:\\users\\91807\\appdata\\roaming\\python\\python310\\site-packages (from streamlit) (0.8.0)\n",
-      "Requirement already satisfied: tornado<7,>=6.0.3 in c:\\users\\91807\\appdata\\roaming\\python\\python310\\site-packages (from streamlit) (6.3.3)\n",
-      "Requirement already satisfied: watchdog<5,>=2.1.5 in c:\\users\\91807\\appdata\\roaming\\python\\python310\\site-packages (from streamlit) (3.0.0)\n",
-      "Requirement already satisfied: jinja2 in c:\\users\\91807\\appdata\\roaming\\python\\python310\\site-packages (from altair<6,>=4.0->streamlit) (3.1.2)\n",
-      "Requirement already satisfied: jsonschema>=3.0 in c:\\users\\91807\\appdata\\roaming\\python\\python310\\site-packages (from altair<6,>=4.0->streamlit) (4.19.0)\n",
-      "Requirement already satisfied: toolz in c:\\users\\91807\\appdata\\roaming\\python\\python310\\site-packages (from altair<6,>=4.0->streamlit) (0.12.0)\n",
-      "Requirement already satisfied: colorama in c:\\users\\91807\\appdata\\roaming\\python\\python310\\site-packages (from click<9,>=7.0->streamlit) (0.4.6)\n",
-      "Requirement already satisfied: gitdb<5,>=4.0.1 in c:\\users\\91807\\appdata\\roaming\\python\\python310\\site-packages (from gitpython!=3.1.19,<4,>=3.0.7->streamlit) (4.0.10)\n",
-      "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\91807\\appdata\\roaming\\python\\python310\\site-packages (from requests<3,>=2.27->streamlit) (3.2.0)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\91807\\appdata\\roaming\\python\\python310\\site-packages (from requests<3,>=2.27->streamlit) (3.4)\n",
-      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\91807\\appdata\\roaming\\python\\python310\\site-packages (from requests<3,>=2.27->streamlit) (1.26.16)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\91807\\appdata\\roaming\\python\\python310\\site-packages (from requests<3,>=2.27->streamlit) (2023.7.22)\n",
-      "Requirement already satisfied: markdown-it-py>=2.2.0 in c:\\users\\91807\\appdata\\roaming\\python\\python310\\site-packages (from rich<14,>=10.14.0->streamlit) (3.0.0)\n",
-      "Requirement already satisfied: pygments<3.0.0,>=2.13.0 in c:\\users\\91807\\appdata\\roaming\\python\\python310\\site-packages (from rich<14,>=10.14.0->streamlit) (2.16.1)\n",
-      "Requirement already satisfied: wheel<1.0,>=0.23.0 in c:\\users\\91807\\appdata\\roaming\\python\\python310\\site-packages (from astunparse>=1.6.0->tensorflow-intel==2.15.0->tensorflow) (0.45.1)\n",
-      "Requirement already satisfied: smmap<6,>=3.0.1 in c:\\users\\91807\\appdata\\roaming\\python\\python310\\site-packages (from gitdb<5,>=4.0.1->gitpython!=3.1.19,<4,>=3.0.7->streamlit) (5.0.0)\n",
-      "Requirement already satisfied: MarkupSafe>=2.0 in c:\\users\\91807\\appdata\\roaming\\python\\python310\\site-packages (from jinja2->altair<6,>=4.0->streamlit) (2.1.3)\n",
-      "Requirement already satisfied: attrs>=22.2.0 in c:\\users\\91807\\appdata\\roaming\\python\\python310\\site-packages (from jsonschema>=3.0->altair<6,>=4.0->streamlit) (23.1.0)\n",
-      "Requirement already satisfied: jsonschema-specifications>=2023.03.6 in c:\\users\\91807\\appdata\\roaming\\python\\python310\\site-packages (from jsonschema>=3.0->altair<6,>=4.0->streamlit) (2023.7.1)\n",
-      "Requirement already satisfied: referencing>=0.28.4 in c:\\users\\91807\\appdata\\roaming\\python\\python310\\site-packages (from jsonschema>=3.0->altair<6,>=4.0->streamlit) (0.30.2)\n",
-      "Requirement already satisfied: rpds-py>=0.7.1 in c:\\users\\91807\\appdata\\roaming\\python\\python310\\site-packages (from jsonschema>=3.0->altair<6,>=4.0->streamlit) (0.10.0)\n",
-      "Requirement already satisfied: mdurl~=0.1 in c:\\users\\91807\\appdata\\roaming\\python\\python310\\site-packages (from markdown-it-py>=2.2.0->rich<14,>=10.14.0->streamlit) (0.1.2)\n",
-      "Requirement already satisfied: google-auth<3,>=1.6.3 in c:\\users\\91807\\appdata\\roaming\\python\\python310\\site-packages (from tensorboard<2.16,>=2.15->tensorflow-intel==2.15.0->tensorflow) (2.22.0)\n",
-      "Requirement already satisfied: google-auth-oauthlib<2,>=0.5 in c:\\users\\91807\\appdata\\roaming\\python\\python310\\site-packages (from tensorboard<2.16,>=2.15->tensorflow-intel==2.15.0->tensorflow) (1.0.0)\n",
-      "Requirement already satisfied: markdown>=2.6.8 in c:\\users\\91807\\appdata\\roaming\\python\\python310\\site-packages (from tensorboard<2.16,>=2.15->tensorflow-intel==2.15.0->tensorflow) (3.4.4)\n",
-      "Requirement already satisfied: tensorboard-data-server<0.8.0,>=0.7.0 in c:\\users\\91807\\appdata\\roaming\\python\\python310\\site-packages (from tensorboard<2.16,>=2.15->tensorflow-intel==2.15.0->tensorflow) (0.7.1)\n",
-      "Requirement already satisfied: werkzeug>=1.0.1 in c:\\users\\91807\\appdata\\roaming\\python\\python310\\site-packages (from tensorboard<2.16,>=2.15->tensorflow-intel==2.15.0->tensorflow) (3.1.3)\n",
-      "Requirement already satisfied: pyasn1-modules>=0.2.1 in c:\\users\\91807\\appdata\\roaming\\python\\python310\\site-packages (from google-auth<3,>=1.6.3->tensorboard<2.16,>=2.15->tensorflow-intel==2.15.0->tensorflow) (0.3.0)\n",
-      "Requirement already satisfied: rsa<5,>=3.1.4 in c:\\users\\91807\\appdata\\roaming\\python\\python310\\site-packages (from google-auth<3,>=1.6.3->tensorboard<2.16,>=2.15->tensorflow-intel==2.15.0->tensorflow) (4.9)\n",
-      "Requirement already satisfied: requests-oauthlib>=0.7.0 in c:\\users\\91807\\appdata\\roaming\\python\\python310\\site-packages (from google-auth-oauthlib<2,>=0.5->tensorboard<2.16,>=2.15->tensorflow-intel==2.15.0->tensorflow) (1.3.1)\n",
-      "Requirement already satisfied: pyasn1<0.6.0,>=0.4.6 in c:\\users\\91807\\appdata\\roaming\\python\\python310\\site-packages (from pyasn1-modules>=0.2.1->google-auth<3,>=1.6.3->tensorboard<2.16,>=2.15->tensorflow-intel==2.15.0->tensorflow) (0.5.0)\n",
-      "Requirement already satisfied: oauthlib>=3.0.0 in c:\\users\\91807\\appdata\\roaming\\python\\python310\\site-packages (from requests-oauthlib>=0.7.0->google-auth-oauthlib<2,>=0.5->tensorboard<2.16,>=2.15->tensorflow-intel==2.15.0->tensorflow) (3.2.2)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "[notice] A new release of pip is available: 25.0 -> 25.0.1\n",
-      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "pip install tensorflow keras pandas numpy pillow streamlit"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -123,9 +33,9 @@
     "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
     "\n",
     "# Define dataset paths\n",
-    "template_path = r\"C:\\Users\\91807\\OneDrive\\Desktop\\MEME\\memes900k\\templates.txt\"\n",
-    "captions_path = r\"C:\\Users\\91807\\OneDrive\\Desktop\\MEME\\memes900k\\captions.txt\"\n",
-    "images_folder = r\"C:\\Users\\91807\\OneDrive\\Desktop\\MEME\\memes900k\\images\"\n",
+    "template_path = r\"C:\\Users\\Vamshi R A\\Downloads\\memes900k\\memes900k\\templates.txt\"\n",
+    "captions_path = r\"C:\\Users\\Vamshi R A\\Downloads\\memes900k\\memes900k\\captions.txt\"\n",
+    "images_folder = r\"C:\\Users\\Vamshi R A\\Downloads\\memes900k\\memes900k\\images\"\n",
     "\n",
     "# Load captions\n",
     "captions = pd.read_csv(captions_path, delimiter=\"\\t\", header=None, names=[\"image\", \"caption\"])\n",
@@ -182,7 +92,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -196,7 +106,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
